--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <body>
         <div id= "site">
             <div id="cabecario">
-            <h1>Site do Aranha</h1>
+            Site do Aranha
             </div>
-            <div>
-                <div id="conteudos">
-                    <h3>Homem-Aranha</h3>
-                    <h3>O espetacular Homem-Aranha</h3>
-                </div>
-                <div id="frases">
-                    <p>Grander poderres trazem grande reponsabilidade
-                    </p>
-                </div>
+            <div id="frases">
+                <p>Grander poderres trazem grande reponsabilidade
+                </p>
             </div>
-            <div id="footer"></div>
+            <div id="footer">
+                links ou referencias
+            </div>
         </div>
     </body>
 </html>
