--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <body>
         <div id= "site">
             <div id="cabecario">
-            Site do Aranha
+                <ul>
+                    <li>Site do Aranha</li>
+                    <li><a href="#">inicio</a></li>
+                    <li><a herf="#">fotos</a></li>
+                    <li><a herf="#">personagens</a></li>
+                    <li><a herf="#">frases</a></li>
+                </ul>
             </div>
             <div id="frases">
                 <p>Grander poderres trazem grande reponsabilidade
